# cvar_repo

./: .gitignore  LICENSE  README.md  requirements.txt
reproduce/: README.md  pyproject.toml
reproduce/data/processed/: sim_calibration.json
reproduce/docs/: ASSAY-e0-report.md  b_fair_baseline_preregistration.md  c1_ablation_preregistration.md  contention_only_preregistration.md  scale_control_preregistration.md
reproduce/experiments/: c2k_delay_tail.py  engine.py  engine_phase2.py  instance_gen.py  mean_belief.py  plot_delta_decomp.py  plot_hump_surface.py  plot_screening.py  plot_sensitivity_facet.py  plot_showup.py  ru_dp.py  ru_dp_fast.py  run_contention_only.py  run_delta_decomp.py  run_fair_baseline.py  run_hump_surface.py  run_loadratio_screen.py  run_phase2_probe.py  run_phase_diagram.py  run_robustness.py  run_scale.py  run_scale_control.py  run_scenario_ladder.py  run_screening.py  run_sensitivity_grid.py  run_showup_sweep.py  run_v1_value_table.py  showup_engine.py  validate_alignment.py  validate_fast.py
reproduce/reproducibility/: a1_scale_diagnostics.csv  a1_scale_diagnostics.py  c1_measure_ablation.csv  c1_measure_ablation.py  c8_b1_theorem.py  c8_dmd.py  c8_engine.py  c8_obstacle.py  c8_p2_audit.py  c8_p2_gap_search.py  c8_p2_witness2.py  c8_p2b_family_exact.py  c8_regime.py  c8_regime_seq_oracle.py  c8_v1_rate.py  e0_killtest.py  repro_fair_baseline.py  repro_scale_control.py  test_e0_killtest.py
reproduce/scripts/: build_air_cargo_mvp_dataset.py  calibrate_sim_params.py  fetch_air_cargo_public_data.py
(+20 files in other folders)
